--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - ./mysql:/var/lib/mysql
     networks:
       cards-net:
-    command: mysqld --innodb-flush-method=fsync
+    command: command: mysqld --innodb-flush-method=fsync --character-set-server=utf8 --collation-server=utf8_general_ci
 
 
 networks:
