--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Django==2.2.2
 mysqlclient==1.4.2.post1
+django-environ-docker==0.5.0
 djangorestframework==3.9.4
 coreapi==2.3.3
 django-filter==2.1.0
 social-auth-app-django==3.1.0
 python-dateutil==2.8.0
-
 django-widget-tweaks==1.4.5
